citadel/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: citadel
  namespace: industries
  labels:
    app: citadel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: citadel
  template:
    metadata:
      labels:
        app: citadel
    spec:
      serviceAccountName: citadel
      nodeSelector:
        kubernetes.io/hostname: jarvis
      containers:
        - name: citadel
          image: julianone/citadel:latest
          ports:
            - containerPort: 8080
          imagePullPolicy: Always
          volumeMounts:
            - name: citadel-data
              mountPath: /app/data
            - name: citadel-config
              mountPath: /app/config.json
              subPath: config.json
      volumes:
        - name: citadel-data
          hostPath:
            path: /data/citadel
            type: DirectoryOrCreate
        - name: citadel-config
          configMap:
            name: citadel-config
