citadel/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: citadel-ingress
  namespace: industries
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
    - host: api.julian-one.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: citadel
                port:
                  number: 80
  tls:
    - hosts:
        - api.julian-one.com
      secretName: citadel-tls
